#Normalizing the emoji to text for further analysis -- Satya Srinivas

--- a/Model_DNN.ipynb
+++ b/Model_DNN.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a364609c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install emoji"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "9c7d0d68",
    "metadata": {},
@@ -15,7 +25,8 @@
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Embedding, LSTM\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-    "from wordcloud import WordCloud"
+    "from wordcloud import WordCloud\n",
+    "import emoji"
    ]
   },
   {
@@ -172,6 +183,24 @@
    "source": [
     "df = df.drop_duplicates('Tweet',keep='first') # dropping the duplicate tweets\n",
     "df['Tweet'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b244d8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Normalizing the emoji to text alongwith cleaning then data\n",
+    "def normalizepreprocessdata(data):\n",
+    "    # Emoji normalization\n",
+    "    data = emoji.demojize(data)\n",
+    "\n",
+    "    # Remove mentions, special characters, hashtags, and URLs\n",
+    "    data = re.sub(r'(@[A-Za-z0-9_]+)|[^\\w\\s]|#|http\\S+', '', data.lower())\n",
+    "\n",
+    "    return data"
    ]
   },
   {
@@ -339,8 +368,10 @@
     }
    ],
    "source": [
-    "df[\"Cleaned_Tweet\"] = [re.sub(r\"(@[A-Za-z0–9_]+)|[^\\w\\s]|#|http\\S+\", \"\", v.lower()) for v in df[\"Tweet\"]] #cleaning then data\n",
-    "df"
+    "#df[\"Cleaned_Tweet\"] = [re.sub(r\"(@[A-Za-z0–9_]+)|[^\\w\\s]|#|http\\S+\", \"\", v.lower()) for v in df[\"Tweet\"]] #cleaning then data\n",
+    "#df\n",
+    "# Apply data preprocessing to the 'Cleaned_Tweet' column\n",
+    "df[\"Cleaned_Tweet\"] = df[\"Tweet\"].apply(normalizepreprocessdata)"
    ]
   },
   {
