updating the code with comments

--- a/model_DNN_OOPS.ipynb
+++ b/model_DNN_OOPS.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importing the useful and necessary libraries\n",
     "import os\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -166,15 +167,16 @@
     }
    ],
    "source": [
+    "#ADAM optimizer\n",
     "if __name__ == \"__main__\":\n",
-    "    data_file = 'C:\\\\Users\\\\user\\\\Downloads\\\\Group3-news-text-sanitized.csv'\n",
-    "    opt = input('Enter your optimizer')\n",
+    "    data_file = 'C:\\\\Users\\\\user\\\\Downloads\\\\Group3-news-text-sanitized.csv' # Path to the CSV file containing the tweet data\n",
+    "    opt = input('Enter your optimizer') # Prompting the user to enter the optimizer\n",
     "    model = TweetClassificationModel(data_file)\n",
     "    model.preprocess_data()\n",
-    "    model.build_model(opt)\n",
-    "    model.train_model()\n",
+    "    model.build_model(opt) # Building the tweet classification model using the chosen optimizer\n",
+    "    model.train_model() #training the model\n",
     "    y_pred = model.evaluate_model()\n",
-    "    model.plot_roc_curve(y_pred)\n",
+    "    model.plot_roc_curve(y_pred) # Plotting the ROC curve to visualize model performance\n",
     "    model.plot_learning_curves()"
    ]
   },
@@ -242,15 +244,16 @@
     }
    ],
    "source": [
+    "#RMS prop optimizer\n",
     "if __name__ == \"__main__\":\n",
-    "    data_file = 'C:\\\\Users\\\\user\\\\Downloads\\\\Group3-news-text-sanitized.csv'\n",
+    "    data_file = 'C:\\\\Users\\\\user\\\\Downloads\\\\Group3-news-text-sanitized.csv'  # Path to the CSV file containing the tweet data\n",
     "    opt = input('Enter your optimizer')\n",
-    "    model = TweetClassificationModel(data_file)\n",
-    "    model.preprocess_data()\n",
+    "    model = TweetClassificationModel(data_file) #model building\n",
+    "    model.preprocess_data() #preprocessing the data\n",
     "    model.build_model(opt)\n",
-    "    model.train_model()\n",
+    "    model.train_model() #training the model\n",
     "    y_pred = model.evaluate_model()\n",
-    "    model.plot_roc_curve(y_pred)\n",
+    "    model.plot_roc_curve(y_pred) # Plotting the ROC curve to visualize model performance\n",
     "    model.plot_learning_curves()"
    ]
   },
@@ -318,6 +321,7 @@
     }
    ],
    "source": [
+    "# SGD optimizer\n",
     "if __name__ == \"__main__\":\n",
     "    data_file = 'C:\\\\Users\\\\user\\\\Downloads\\\\Group3-news-text-sanitized.csv'\n",
     "    opt = input('Enter your optimizer')\n",
@@ -394,6 +398,7 @@
     }
    ],
    "source": [
+    "# AdaDelta optimizer\n",
     "if __name__ == \"__main__\":\n",
     "    data_file = 'C:\\\\Users\\\\user\\\\Downloads\\\\Group3-news-text-sanitized.csv'\n",
     "    opt = input('Enter your optimizer')\n",
@@ -470,6 +475,7 @@
     }
    ],
    "source": [
+    "#using adamax optimizer for hyperparameter tuning\n",
     "if __name__ == \"__main__\":\n",
     "    data_file = 'C:\\\\Users\\\\user\\\\Downloads\\\\Group3-news-text-sanitized.csv'\n",
     "    opt = input('Enter your optimizer')\n",
