Bayesian optimizer implementation

--- a/model_DNN_OOPS.ipynb
+++ b/model_DNN_OOPS.ipynb
@@ -571,13 +571,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "31975941",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hyperparameter tuning "
+    "#hyperparameter tuning with Baysiean optimizer\n",
+    "def bayesian_optimization(self):\n",
+    "        # Define the hyperparameter search space\n",
+    "        pbounds = {\n",
+    "            'learning_rate': (1e-5, 1e-2),\n",
+    "            'dropout_rate': (0.1, 0.5),\n",
+    "            'lstm_units': (32, 128)\n",
+    "        }\n",
+    "\n",
+    "        def evaluate_model(learning_rate, dropout_rate, lstm_units):\n",
+    "            # Build the model with the given hyperparameters\n",
+    "            optimizer = Adam(learning_rate=learning_rate)\n",
+    "            self.build_model(optimizer)\n",
+    "            # Train the model with the current hyperparameters\n",
+    "            history = self.train_model(epochs=5, batch_size=32)\n",
+    "            # Return the validation accuracy as the objective to maximize\n",
+    "            return history.history['val_accuracy'][-1]\n",
+    "\n",
+    "        # Initialize Bayesian Optimization\n",
+    "        optimizer = BayesianOptimization(\n",
+    "            f=evaluate_model,\n",
+    "            pbounds=pbounds,\n",
+    "            verbose=2,  # Set verbose=2 to see the optimization process\n",
+    "            random_state=42\n",
+    "        )\n",
+    "        # Perform optimization\n",
+    "        optimizer.maximize(init_points=5, n_iter=10)\n",
+    "\n",
+    "        # Get the best hyperparameters\n",
+    "        best_hyperparams = optimizer.max['params']\n",
+    "        print(\"Best Hyperparameters:\")\n",
+    "        print(best_hyperparams)\n",
+    "\n",
+    "        # Train the model with the best hyperparameters\n",
+    "        optimizer = Adam(learning_rate=best_hyperparams['learning_rate'])\n",
+    "        self.build_model(optimizer)\n",
+    "        history = self.train_model(epochs=50, batch_size=32)\n",
+    "\n",
+    "        # Evaluate and plot ROC curve with the best model\n",
+    "        y_pred = self.evaluate_model()\n",
+    "        self.plot_roc_curve(y_pred)\n",
+    "\n",
+    "        # Plot learning curves of the best model\n",
+    "        self.Overfitting_Underfitting(history)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c745ddf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -596,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
