--- a/model_DNN_OOPS.ipynb
+++ b/model_DNN_OOPS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "aca3aacd",
    "metadata": {},
    "outputs": [],
@@ -16,12 +16,41 @@
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "import re\n",
     "from sklearn.metrics import roc_auc_score, roc_curve\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from keras.optimizers import Adam\n",
+    "from bayes_opt import BayesianOptimization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "id": "67a7fdb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting bayesian-optimization\n",
+      "  Downloading bayesian_optimization-1.4.3-py3-none-any.whl (18 kB)\n",
+      "Requirement already satisfied: numpy>=1.9.0 in c:\\users\\repak\\anaconda3\\lib\\site-packages (from bayesian-optimization) (1.24.3)\n",
+      "Requirement already satisfied: scipy>=1.0.0 in c:\\users\\repak\\anaconda3\\lib\\site-packages (from bayesian-optimization) (1.10.1)\n",
+      "Requirement already satisfied: scikit-learn>=0.18.0 in c:\\users\\repak\\anaconda3\\lib\\site-packages (from bayesian-optimization) (1.2.2)\n",
+      "Requirement already satisfied: colorama>=0.4.6 in c:\\users\\repak\\anaconda3\\lib\\site-packages (from bayesian-optimization) (0.4.6)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\repak\\anaconda3\\lib\\site-packages (from scikit-learn>=0.18.0->bayesian-optimization) (1.2.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\repak\\anaconda3\\lib\\site-packages (from scikit-learn>=0.18.0->bayesian-optimization) (2.2.0)\n",
+      "Installing collected packages: bayesian-optimization\n",
+      "Successfully installed bayesian-optimization-1.4.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install bayesian-optimization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "4c12ae95",
    "metadata": {},
    "outputs": [],
@@ -65,7 +94,8 @@
     "\n",
     "    def train_model(self, epochs=5, batch_size=32):\n",
     "        # Train the LSTM model\n",
-    "        self.history = self.model.fit(self.X_train_padded, self.y_train, validation_data=(self.X_test_padded, self.y_test), epochs=epochs, batch_size=batch_size)\n",
+    "        history = self.model.fit(self.X_train_padded, self.y_train, validation_data=(self.X_test_padded, self.y_test), epochs=epochs, batch_size=batch_size)\n",
+    "        return history\n",
     "\n",
     "    def evaluate_model(self):\n",
     "        # Evaluate the model on the test set\n",
@@ -86,20 +116,63 @@
     "    def plot_learning_curves(self):\n",
     "        # Plot the learning curves\n",
     "        plt.figure()\n",
-    "        plt.plot(self.history.history['accuracy'], label='Training Accuracy')\n",
-    "        plt.plot(self.history.history['val_accuracy'], label='Validation Accuracy')\n",
+    "        plt.plot(history.history['accuracy'], label='Training Accuracy')\n",
+    "        plt.plot(history.history['val_accuracy'], label='Validation Accuracy')\n",
     "        plt.xlabel('Epochs')\n",
     "        plt.ylabel('Accuracy')\n",
     "        plt.legend()\n",
     "        plt.show()\n",
     "\n",
     "        plt.figure()\n",
-    "        plt.plot(self.history.history['loss'], label='Training Loss')\n",
-    "        plt.plot(self.history.history['val_loss'], label='Validation Loss')\n",
+    "        plt.plot(history.history['loss'], label='Training Loss')\n",
+    "        plt.plot(history.history['val_loss'], label='Validation Loss')\n",
     "        plt.xlabel('Epochs')\n",
     "        plt.ylabel('Loss')\n",
     "        plt.legend()\n",
-    "        plt.show()"
+    "        plt.show()\n",
+    "    def bayesian_optimization(self):\n",
+    "        # Define the hyperparameter search space\n",
+    "        pbounds = {\n",
+    "            'learning_rate': (1e-5, 1e-2),\n",
+    "            'dropout_rate': (0.1, 0.5),\n",
+    "            'lstm_units': (32, 128)\n",
+    "        }\n",
+    "\n",
+    "        def evaluate_model(learning_rate, dropout_rate, lstm_units):\n",
+    "            # Build the model with the given hyperparameters\n",
+    "            optimizer = Adam(learning_rate=learning_rate)\n",
+    "            self.build_model(optimizer)\n",
+    "            # Train the model with the current hyperparameters\n",
+    "            history = self.train_model(epochs=5, batch_size=32)\n",
+    "            # Return the validation accuracy as the objective to maximize\n",
+    "            return history.history['val_accuracy'][-1]\n",
+    "\n",
+    "        # Initialize Bayesian Optimization\n",
+    "        optimizer = BayesianOptimization(\n",
+    "            f=evaluate_model,\n",
+    "            pbounds=pbounds,\n",
+    "            verbose=2,  # Set verbose=2 to see the optimization process\n",
+    "            random_state=42\n",
+    "        )\n",
+    "        # Perform optimization\n",
+    "        optimizer.maximize(init_points=5, n_iter=10)\n",
+    "\n",
+    "        # Get the best hyperparameters\n",
+    "        best_hyperparams = optimizer.max['params']\n",
+    "        print(\"Best Hyperparameters:\")\n",
+    "        print(best_hyperparams)\n",
+    "\n",
+    "        # Train the model with the best hyperparameters\n",
+    "        optimizer = Adam(learning_rate=best_hyperparams['learning_rate'])\n",
+    "        self.build_model(optimizer)\n",
+    "        history = self.train_model(epochs=50, batch_size=32)\n",
+    "\n",
+    "        # Evaluate and plot ROC curve with the best model\n",
+    "        y_pred = self.evaluate_model()\n",
+    "        self.plot_roc_curve(y_pred)\n",
+    "\n",
+    "        # Plot learning curves of the best model\n",
+    "        self.Overfitting_Underfitting(history)"
    ]
   },
   {
@@ -571,61 +644,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "31975941",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#hyperparameter tuning with Baysiean optimizer\n",
-    "def bayesian_optimization(self):\n",
-    "        # Define the hyperparameter search space\n",
-    "        pbounds = {\n",
-    "            'learning_rate': (1e-5, 1e-2),\n",
-    "            'dropout_rate': (0.1, 0.5),\n",
-    "            'lstm_units': (32, 128)\n",
-    "        }\n",
-    "\n",
-    "        def evaluate_model(learning_rate, dropout_rate, lstm_units):\n",
-    "            # Build the model with the given hyperparameters\n",
-    "            optimizer = Adam(learning_rate=learning_rate)\n",
-    "            self.build_model(optimizer)\n",
-    "            # Train the model with the current hyperparameters\n",
-    "            history = self.train_model(epochs=5, batch_size=32)\n",
-    "            # Return the validation accuracy as the objective to maximize\n",
-    "            return history.history['val_accuracy'][-1]\n",
-    "\n",
-    "        # Initialize Bayesian Optimization\n",
-    "        optimizer = BayesianOptimization(\n",
-    "            f=evaluate_model,\n",
-    "            pbounds=pbounds,\n",
-    "            verbose=2,  # Set verbose=2 to see the optimization process\n",
-    "            random_state=42\n",
-    "        )\n",
-    "        # Perform optimization\n",
-    "        optimizer.maximize(init_points=5, n_iter=10)\n",
-    "\n",
-    "        # Get the best hyperparameters\n",
-    "        best_hyperparams = optimizer.max['params']\n",
-    "        print(\"Best Hyperparameters:\")\n",
-    "        print(best_hyperparams)\n",
-    "\n",
-    "        # Train the model with the best hyperparameters\n",
-    "        optimizer = Adam(learning_rate=best_hyperparams['learning_rate'])\n",
-    "        self.build_model(optimizer)\n",
-    "        history = self.train_model(epochs=50, batch_size=32)\n",
-    "\n",
-    "        # Evaluate and plot ROC curve with the best model\n",
-    "        y_pred = self.evaluate_model()\n",
-    "        self.plot_roc_curve(y_pred)\n",
-    "\n",
-    "        # Plot learning curves of the best model\n",
-    "        self.Overfitting_Underfitting(history)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "6c745ddf",
+   "id": "bfc3232f",
    "metadata": {},
    "outputs": [],
    "source": []
